# MathsTrainer

./: .gitignore  README.md  __main__.py  setup.cfg
mtrainer/: __init__.py  __main__.py  calibrate.py  callibrate.py
