[metadata]
name = mtrainer
version = 0.1
author = "WizzyGeek"
url = "https://github.com/WizzyGeek/MathsTrainer"
license = "MIT"
classifiers =
    "Development Status :: 5 - Production/Stable"
    "Environment :: Console"
    "Topic :: Education"

long_description = file: README.md


[options]
packages = find:

[options.entry_points]
console_scripts =
    mtrainer = mtrainer.__main__:main

[option.extra_requires]
callibrate =
    appdirs